# fossil-offchain-processor

./: .codespellrc  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.request-manager  Dockerfile.starknet-handler  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.sqlx/: query-031736178f89cfab9aaa3a2a33e3d2065a41a4199d3dc2c9be83cc24ddcb268a.json  query-034885113955b2e663200231052c152570bba627d714ac33b3d7f59ce1c595b9.json  query-0b8ed07f0a603751c082830ef3f77c61d161f9cd90639a94d95b57458dda7ae6.json  query-15abcec30676afd161120ca4896e5326e199988b8a589d292daac20bca0794ee.json  query-1e40aed3e381be73ee36242b6c820c63b29159ffe4b0503107884d68d0fb5c19.json  query-2000ff52b19af59af9fbf2c66308aa1fb2e0a048866a29bba3bc92bd9c58161e.json  query-251935803b7dde76cfec0d396fe8b926eb3bed837aa7230043f5c44874fe1c03.json  query-3e8ac9fc3cbaade0dea73d806f52dc01641ba95099eed75370c96076fa7ed9fe.json  query-420115e9d68d14116ac43ba19a4f8df4f7d3e5c6f79df10396c6332ac47c87c6.json  query-4afeff69aa24aec00b14a93e50f28fe2f0d4123f2f7b11546f546fee765ee76f.json  query-4bcaa3f2512796fa62805415f1b9ae7f7093af37960f5e878a99f62674e6c393.json  query-53ca700c5d999d2751707bb3dcbc56a01e8c7ca10933527d5769dad5dd797479.json  query-570b1625e050a25b661b524412e5f5d10089b57ad3e9793a36e9464ebc1a5cd2.json  query-5ef908f935ec06a1912b09fd615dba5d5ad89a968a7f0996ddee2680cb84d671.json  query-6d36f68af1f387f00a1d0c99a9d826b1e38cbfe3f86361e24176670833e4f138.json  query-707042883946b33814fba93e269c8b510a71405da2d50e907d0eba23ec7af0ae.json  query-757f878e1eb404411c1b32592cdf2f1c0c885c6457357fd98f5525e656ff4ad8.json  query-79d87468dc53ecef490022e3ed5ea4eec7f6999d342624fb12772613c0098a30.json  query-7d53c2c071914857d47d72dcdfea3a873154955a0c633d042716378fd10e6815.json  query-8cbd255a3eb89b5917083cff990674f521ed15a0db4cda568d1578287a9d2fd2.json  query-97445c4250fa1cab2685494cf62fc2da7d05abcb533e93f1076515048c5f9517.json  query-9aae040d0b4b2330d95b55c5ea6d6bb68a472e04dfcc81273547bd54eeb95146.json  query-d48e4efc0a1488ee817c97c60f0ca69052e4b459f1922e7e409df2fa0a3d2a71.json  query-d4fe1e4431076a3c6af5f90993fcb0ae7786b0288ec3a4c104e70822d68d1d46.json  query-dd55af87368daa04cf1fe5410042786cd4b8496c007aaae80331a1ddb23456e2.json  query-dd8a739a8ff8434226d21dfa8661338b93e34bf70cb0b1a3559b174b6608774e.json  (+4 more)
backend-server/: Cargo.toml
crates/block-validity/: Cargo.toml
crates/block-validity/src/: lib.rs  main.rs  utils.rs
crates/db-access/: Cargo.toml  README.md
crates/db-access/migrations/: 20241004065744_api_key_auth.down.sql  20241004065744_api_key_auth.sql  20241004065744_api_key_auth.up.sql  20241020193022_create_blockheaders_and_transactions.sql  20241022074524_create_api_keys.sql  20241022074532_create_blockheaders.sql  20241022074539_create_transactions.sql  20241022074547_create_job_requests.sql  20241024035929_api_keys.down.sql  20241024035948_blockheaders.down.sql  20241024035948_blockheaders.up.sql  20241024040004_transactions.down.sql  20241024040004_transactions.up.sql  20241024044528_job_requests.down.sql  20241024044528_job_requests.up.sql  20241024044538_api_keys.up.sql  job_requests.sql
crates/db-access/src/: auth.rs  lib.rs  main.rs  models.rs  queries.rs  utils.rs  volatility.rs
crates/db-access/src/rpc/: mod.rs  utils.rs
crates/eth-block-rlp/: Cargo.toml
crates/eth-block-rlp/src/: block_header.rs  constants.rs  lib.rs  main.rs  rpc_client.rs
crates/eth-block-rlp/src/eras/: genesis_to_london.rs  london_to_paris.rs  mod.rs  paris_to_shanghai.rs  shanghai_to_cancun.rs
crates/mmr-accumulator/: Cargo.toml
crates/mmr-accumulator/.sqlx/: query-0a911fbf7e5b0aa9f574f1a8a5e127b2250cb225ba82ea19f1068238447836db.json  query-570b1625e050a25b661b524412e5f5d10089b57ad3e9793a36e9464ebc1a5cd2.json  query-8cbd255a3eb89b5917083cff990674f521ed15a0db4cda568d1578287a9d2fd2.json  query-d4fe1e4431076a3c6af5f90993fcb0ae7786b0288ec3a4c104e70822d68d1d46.json
crates/mmr-accumulator/src/: error.rs  lib.rs  main.rs  processor_utils.rs  store.rs
crates/mmr-accumulator/src/ethereum/: mod.rs
crates/proof-generator/: .env.example  Cargo.toml  Dockerfile  README.md
crates/proof-generator/src/: main.rs
crates/proof-generator/src/controller/: eth_blocks.rs  mev_blocker.rs  mod.rs
crates/proof-generator/src/model/: eth_rpc.rs  hex.rs  mod.rs  proof.rs  storage_proof.rs
crates/proof-generator/tests/: integration_tests.rs
crates/request-manager/: Cargo.toml  README.md
crates/request-manager/examples/: test_acconut.rs
crates/request-manager/src/: main.rs  state.rs  utils.rs
crates/request-manager/src/handlers/: get_storage_value.rs  mod.rs
crates/server/: Cargo.toml  Dockerfile  Dockerfile.migration  README.md  docker-compose.yml  run-migrations.sh
crates/server/src/: lib.rs  main.rs  reserve_price.rs  types.rs
crates/server/src/handlers/: api_key.rs  get_pricing_data.rs  health_check.rs  job_status.rs  latest_block.rs  mod.rs  pricing_callback.rs  reserve_price.rs  root.rs  twap.rs  volatility.rs
crates/server/src/handlers/fixtures/: mod.rs
crates/server/src/middlewares/: auth.rs
crates/server/src/pricing_data/: cap_level.rs  max_returns.rs  mod.rs  reserve_price.rs  twap.rs  utils.rs  volatility.rs
crates/server/src/scripts/: create_api_key.rs
crates/server/src/starknet_callback/: callback.rs
crates/server/tests/handlers/: get_pricing_data_tests.rs
crates/starknet-handler/: Cargo.toml
crates/starknet-handler/examples/: get_state_root.rs  prove_storage.rs  store_state_root.rs
crates/starknet-handler/src/: error.rs  lib.rs  util.rs
crates/starknet-handler/src/artifacts/: FactRegistry.json  fossil_L1HeaderStore.contract_class.json
crates/starknet-handler/src/fact_registry/: README.md  fact_registry.rs  mod.rs
crates/starknet-handler/src/interface/: mod.rs
crates/starknet-handler/src/l1_headers_store/: README.md  l1_headers_store.rs  mod.rs
crates/starknet-handler/src/resilience/: circuit_breaker.rs  mod.rs
relayer/: Cargo.toml
relayer/src/relayer/: abi.rs  error.rs  l1_message_sender.rs  mod.rs
relayer/tests/: relayer.rs
scripts/: clippy.sh
src/: main.rs
(+41 files in other folders)
