[workspace]
members = [
    "crates/server",
    "crates/db-access",
    "crates/starknet-handler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenv = "0.15"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "bigdecimal",
    "chrono",
    "macros",
] }
starknet = "0.13"
starknet-crypto = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.15", features = ["openblas-system"], default-features = false }
polars = { version = "0.43", features = ["lazy", "dynamic_group_by", "rolling_window", "ndarray"] }
statrs = "0.17"
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray-rand = "0.15.0"
