[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2", default-features = false, features = ["rustls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
primitive-types = { version = "0.12", features = ["serde"] }
