[package]
name = "block-validity"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
db-access = { path = "../db-access" }
eth-rlp-verify = { git = "https://github.com/ametel01/eth-rlp-verify.git" }

tracing = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }

tracing-subscriber = "0.3.16"

