[package]
name = "db-access"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }

chrono = "0.4.38"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

eth-rlp-types = { git = "https://github.com/ametel01/eth-rlp-verify.git" }