[package]
name = "eth-block-rlp"
version = "0.1.0"
edition = "2021"

[dependencies]
rlp = "0.5"
ethereum-types = "0.14"
sha3 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
dotenv = "0.15"

[[bin]]
name = "eth-block-rlp"
path = "src/main.rs"
