[package]
name = "mmr-accumulator"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-validity = { path = "../block-validity" }
db-access = { path = "../db-access" }

tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }

hasher = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace", features = ["poseidon"] }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }



tracing-subscriber = "0.3"
uuid = "1.10.0"
# alloy = { version = "0.5.4", features = ["providers"]}
# alloy-sol-types = { version = "0.8.10", features = []}
alloy = { version = "0.4.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }

thiserror = "1.0"
reqwest = "0.12.5"
