[package]
name = "proof-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2", default-features = false, features = ["rustls","celo"] }
axum = "0.7.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
thiserror = "1.0"
num-bigint = "0.4.5"
primitive-types = { version = "0.12", features = ["serde"] }
serde_with = "3.8.1"
dotenv = "0.15.0"
tracing = "0.1.40"
