[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-access = { path = "../db-access" }
tokio = { version = "1", features = ["full"] }
axum = "0.7.7"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace", "auth"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
chrono = "0.4.38"
# reqwest = { version = "0.12", features = ["json"] }
starknet-crypto = "0.7.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
    "fmt",
] }

sqlx = { version = "0.7.0", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "bigdecimal",
] }

# Reserve price dependencies
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
polars = { version = "0.41.3", features = [
    "lazy",
    "dynamic_group_by",
    "rolling_window",
    "ndarray",
] }
statrs = "0.16"
optimization = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray-rand = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
axum-test = "15.7.1"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "create_api_key"
path = "src/scripts/create_api_key.rs"
