[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
default-run = "server"

[dependencies]
db-access = { path = "../db-access" }
starknet-handler = { path = "../starknet-handler" }

tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15.0"

# Use axum with the appropriate features (without 'tower')
axum = { version = "0.7.7", features = ["http1", "http2", "json", "macros"] }

tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace", "auth"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = { version = "0.6.12" }
chrono = { version = "0.4", features = ["serde"] }
starknet-crypto = "0.7.2"
starknet = "0.12"

tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
    "fmt",
    "time",
] }
time = "0.3.11"
futures = "0.3.31"
# Reserve price dependencies
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
polars = { version = "0.43", features = [
    "lazy",
    "dynamic_group_by",
    "rolling_window",
    "ndarray",
] }
statrs = "0.17"
optimization = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
# async-trait = "0.1.83"
hyper = "1.0"
ndarray-rand = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.14"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
axum-test = "16.2"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
