[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
default-run = "server"

[[bin]]
name = "create_api_key"
path = "src/scripts/create_api_key.rs"

[dependencies]
db-access = { path = "../db-access" }
starknet-handler = { path = "../starknet-handler" }

tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
starknet-crypto = { workspace = true }
starknet = { workspace = true }
linfa = { workspace = true }
linfa-linear = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
polars = { workspace = true }
statrs = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
ndarray-rand = { workspace = true }

# Server-specific dependencies
axum = { version = "0.8", features = ["http1", "http2", "json", "macros"] }
# tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "time"] }
# time = "0.3"
optimization = "0.2.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
# mockall = "0.13"
testcontainers = "0.14"
lazy_static = "1.4"
axum-test = "17"
# sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
