[package]
name = "starknet-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proof-generator = { path = "../proof-generator" }
starknet = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.0", features = ["full"] }
primitive-types = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.9"
thiserror = "1.0.49"
