[package]
name = "starknet-handler"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# server = { path = "../server" }

eyre = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
starknet-crypto = { workspace = true }
starknet = { workspace = true }
